syntax = "proto3";

service CourseRecommendation {
	rpc Recommend(CourseRecommendationRequest) returns (CourseRecommendationResponse) {}
}

message SemesterKey {
	string studyProgram = 1;
	string semester = 2;
	string academicYear = 3;
}

message CourseKey {
	string courseNo = 1;
	SemesterKey semesterKey = 2;
}

message CourseRecommendationRequest {
	string variant = 1;
	SemesterKey semesterKey = 2;
	repeated CourseKey selectedCourses = 3;
}

message CourseRecommendationResponse {
	message CourseDetail {
		CourseKey key = 1;
		string courseNameEn = 2;
	}
	repeated CourseDetail courses = 2;
}
